Kubernetes/gatekeeper-policies/constraints/allowed-repos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-repos
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    repos:
      - "openzipkin/zipkin"
      - "redis"
      - "docker.io/kevbosk/frontend:latest"
      - "gcr.io/allowedproject/"
      - "thesis/"
      - "openpolicyagent/"
